fix modal overflow

--- a/src/static/scss/components/_modal.scss
+++ b/src/static/scss/components/_modal.scss
@@ -74,7 +74,6 @@
 
   .modal-dialog {
     max-width: 380px;
-    max-height: calc(100vh - 2.5rem);
     overflow-y: scroll;
 
     &--medium {
